# cpp-server

./: CMakeLists.txt  Dockerfile  docker-compose.yaml  kuberneted.yaml
src/: App.cpp  AppComponent.hpp
src/controller/: MyController.hpp
utility/: install-oatpp-modules.sh
